Finished starter site

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,3 +27,22 @@
 {
   margin-right: 30%;
 }
+
+.mL20
+{
+  margin-left: 20%;
+}
+.mR20
+{
+  margin-right: 20%;
+}
+
+.mT10
+{
+  margin-top: 10%;
+}
+
+.mB10
+{
+  margin-bottom: 10%;
+}
